# paper-to-patent

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  MEMORY.md  README.md  ROADMAP.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml  dbt-docs.yml  keep-app-alive.yml  ping-app.yml  repo-heartbeat.yml
.streamlit/: config.toml
apps/ui/: app.py  app_theme.md  data.py  render.py  requirements.txt  tour.py
apps/ui/.streamlit/: config.toml
apps/ui/pages/: 1_Family.py  1_Map.py  2_Family.py  2_Map.py  3_Org.py  4_Trace.py
apps/ui/tests/: conftest.py  test_data.py  test_render.py
docs/: cluster_label_review.md  data_source_manifest.md  er_eval_set.md  findings.md  ui_story.md  workflow.md
infra/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example
models/: dbt_project.yml  profiles.yml
models/fixtures/: build_source_stubs.py
models/fixtures/raw/openalex/v2024-01-01/: works.parquet
models/fixtures/raw/patentsview/applications/v2024-01-01/: applications.parquet
models/fixtures/raw/patentsview/assignees/v2024-01-01/: assignees.parquet
models/fixtures/raw/patentsview/citations/v2024-01-01/: citations.parquet
models/fixtures/raw/patentsview/cpc/v2024-01-01/: cpc.parquet
models/fixtures/raw/patentsview/npl/v2024-01-01/: npl.parquet
models/fixtures/raw/patentsview/patents/v2024-01-01/: patents.parquet
models/fixtures/raw/patentsview/patents_scoped/v2024-01-01/: patents_scoped.parquet
models/macros/: catalog.sql  create_external_sources.sql
models/models/marts/: _docs.md  _schema.yml  dim_cpc.sql  dim_organization.sql  dim_paper.sql  dim_patent.sql  dim_technology_cluster.sql  fact_document_cluster.sql  fact_npl_link.sql  fact_patent_citation.sql  fact_patent_filing.sql  fact_publication.sql  mart_competitive.sql  mart_family.sql  mart_gap.sql  mart_velocity.sql  schema.yml  seed_cluster_family.sql
models/models/queries/: _schema.yml  idea_journey.sql
models/models/staging/: _schema.yml  _sources.yml  schema.yml  sources.yml  stg_assignees.sql  stg_cpc.sql  stg_npl.sql  stg_openalex_works.sql  stg_patent_citations.sql  stg_patents_scoped.sql
models/seeds/: seed_cluster_family.csv
models/tests/: assert_excluded_documents_not_silently_empty.sql  assert_fact_document_cluster_no_orphans.sql  assert_fact_npl_link_single_source.sql  assert_int_org_crosswalk_composite_key.sql  assert_mart_competitive_composite_key.sql  assert_mart_competitive_share_in_range.sql  assert_mart_gap_hhi_in_range.sql  assert_mart_gap_n_patents_nonneg.sql  assert_mart_velocity_composite_key.sql  assert_mart_velocity_npl_lag_nonneg.sql  assert_seed_cluster_family_floor.sql
notebooks/: part0_npl_spike.py  part0_openalex_count.py  part0_r2_check.py
pipelines/: workspace.yaml
pipelines/nexus/: __init__.py  logging.py
pipelines/nexus/assets/entity_resolution/: assemble.py  crosswalk.py  fuzzy_bridge.py  normalize.py  ror_bridge.py  seed.py  seed_crosswalk.csv
pipelines/nexus/assets/ingest/: openalex.py  patentsview.py
pipelines/nexus/assets/ml/: cluster_labels.py  clustering.py  embeddings.py  exclusions.py
pipelines/nexus/assets/transform/: dbt_assets.py  gold_export.py  mf_matcher.py  npl_matcher.py
pipelines/nexus/resources/: duckdb.py  patentsview.py  r2.py  warehouse.py
pipelines/nexus/tests/: test_cluster_labels.py  test_clustering.py  test_embeddings.py  test_exclusions.py  test_fuzzy_bridge.py  test_gold_export.py  test_layer1_staging.py  test_mf_matcher.py  test_normalize.py  test_npl_matcher.py  test_openalex_ingest.py  test_org_crosswalk.py  test_patent_search_client.py  test_patentsview_bulk.py  test_patentsview_scoped.py  test_ror_bridge.py  test_seed_crosswalk.py  test_warehouse.py
