[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-to-patent"
version = "0.1.0"
description = "The Chips Behind AI — research paper to US patent tracker"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-dbt",
    "dbt-core>=1.8.0",
    "dbt-duckdb>=1.8.0",
    "duckdb>=1.1.0",
    "httpx>=0.27.0",
    "polars>=1.0.0",
    "rapidfuzz>=3.0.0",
    # Part 5 — embeddings, clustering, labelling
    "sentence-transformers>=3.0.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.5.0",
    "anthropic>=0.40.0",
    "langdetect>=1.0.9",
    # Part 7 — UI
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
    "streamlit-searchbox>=0.1.24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pipelines/nexus"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["pipelines/nexus/tests"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "pytest>=8.0.0",
]
